# minimal_clean_architecture

./: CMakeLists.txt  controller_base.hpp  da_base.hpp  interface_adapter.hpp  presenter_base.hpp  registery.hpp
architecture/: CMakeLists.txt
architecture/include/: delegate.hpp  icontroller.hpp  ipresenter.hpp  iusecase.hpp
example/: CMakeLists.txt
example/include/: timer.hpp
example/src/: main.cpp
